ncc/testsuite/positive/generics3.n
public class A['a] where 'a : new()
{
  public static CreateInstance() : 'a
  {
    'a();
  }
}

public class B : A[B]
{
  public Test() : void { System.Console.WriteLine("passed"); }
}

module Program
{
  Main() : void
  {
    def b = B.CreateInstance();

    b.Test();
  }
}

/*
BEGIN-OUTPUT
passed
END-OUTPUT
*/