ncc/testsuite/negative/gen-special-constraints2.n
class A {}
class B[T] where T : A 
{
  public static f[Q] () : void where Q : new () {
  }
  public q () : void {
    _ = f.[T] (); // E: must have a public parameterless constructor
  }
}
